--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.7",
+    "file-type": "^20.1.0",
     "formik": "^2.4.6",
     "jotai": "^2.10.2",
     "react": "^18.3.1",
